--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="cardColor">#7381B337</color>
+    <color name="starColor">#FEFA83</color>
+    <color name="likeColor">#DE868F</color>
 </resources>
