--- a/app/src/main/res/layout/like_card_layout.xml
+++ b/app/src/main/res/layout/like_card_layout.xml
@@ -17,7 +17,7 @@
         android:id="@+id/image_like"
         android:layout_width="130dp"
         android:layout_height="180dp"
-        app:srcCompat="@mipmap/examplePicture"
+        app:srcCompat="@mipmap/examplepicture"
         android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
         />
@@ -26,7 +26,7 @@
         android:id="@+id/logo_like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/headScu"
+        app:srcCompat="@mipmap/headscu"
         android:layout_marginTop="210dp"
         android:layout_marginLeft="25dp"/>
 
