整合小玥和宇权代码

--- a/app/src/main/res/layout/activity_my_collection.xml
+++ b/app/src/main/res/layout/activity_my_collection.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MyCollection">
 
 
@@ -21,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
+            android:textColor="@color/black"
             android:text="我的收藏"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -31,10 +33,11 @@
             android:id="@+id/returnButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="273dp"
+            android:layout_marginStart="316dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.396"
             app:srcCompat="@drawable/returnbutton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
