--- a/app/src/main/res/layout/activity_my_likes.xml
+++ b/app/src/main/res/layout/activity_my_likes.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MyLikes">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
@@ -19,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
+            android:textColor="@color/black"
             android:text="我的点赞"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,10 +31,11 @@
             android:id="@+id/returnButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="273dp"
+            android:layout_marginStart="316dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.396"
             app:srcCompat="@drawable/returnbutton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
