--- a/app/src/main/res/layout/activity_my_collection.xml
+++ b/app/src/main/res/layout/activity_my_collection.xml
@@ -30,6 +30,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            android:onClick="collectBackTome"
             android:id="@+id/returnButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
