--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="cardColor">#7381B337</color>
     <color name="starColor">#FEFA83</color>
     <color name="likeColor">#DE868F</color>
-    <color name="windowColor">#B0F4CE98</color>
+    <color name="windowColor">#F4CE98</color>
     <color name="gray">#F31E1B1B</color>
     <color name="transparent">#00000000</color>
     <color name="deepgreen">#94ac7b</color>
