--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -144,6 +144,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
                 android:text="我的收藏"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:gravity="center_vertical"
@@ -183,6 +184,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
+                android:textColor="@color/black"
                 android:text="我的点赞"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -223,6 +225,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
+                android:textColor="@color/black"
                 android:text="我的口味"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -263,6 +266,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
+                android:textColor="@color/black"
                 android:text="退出登录"
                 android:textSize="20sp"
                 android:textStyle="bold"
