--- a/app/src/main/res/layout/activity_my_collection.xml
+++ b/app/src/main/res/layout/activity_my_collection.xml
@@ -55,18 +55,24 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
-    <GridView
-        android:id="@+id/gridview_collection"
-        android:gravity="center"
-        android:columnWidth="180dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="3"
-        android:verticalSpacing="10dp"
-        android:cacheColorHint="#00000000"
-        android:listSelector="#00000000"
-        android:scrollbars="none">
-    </GridView>
+
+        <GridView
+            android:id="@+id/gridview_collection"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:cacheColorHint="#00000000"
+            android:columnWidth="180dp"
+            android:gravity="center"
+            android:listSelector="#00000000"
+            android:numColumns="2"
+            android:scrollbars="none"
+            android:verticalSpacing="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></GridView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
