--- a/app/src/main/res/layout/collection_card_layout.xml
+++ b/app/src/main/res/layout/collection_card_layout.xml
@@ -37,6 +37,7 @@
         android:layout_marginLeft="65dp"
         android:layout_marginTop="210dp"
         android:textSize="14dp"
+        android:textColor="@color/black"
         android:text="断章" />
 
     <ImageView
@@ -45,7 +46,7 @@
         android:layout_height="37dp"
         android:layout_marginLeft="130dp"
         android:layout_marginTop="200dp"
-        android:onClick="quitCollection"
+
         app:srcCompat="@drawable/star" />
 
 </RelativeLayout>
